# infernum-framework

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.md.bak  SECURITY.md  rustfmt.toml
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/abaddon/: Cargo.toml
crates/abaddon/benches/: inference.rs
crates/abaddon/src/: backend.rs  config.rs  engine.rs  gguf.rs  kv_cache.rs  lib.rs  loader.rs  sampler.rs  tokenizer.rs
crates/abaddon/src/models/: llama.rs  mod.rs
crates/asmodeus/: Cargo.toml
crates/asmodeus/src/: config.rs  lib.rs  lora.rs  trainer.rs
crates/beleth/: Cargo.toml
crates/beleth/src/: agent.rs  lib.rs  memory.rs  planner.rs  tool.rs
crates/dantalion/: Cargo.toml
crates/dantalion/src/: lib.rs  logging.rs  metrics.rs  tracing_config.rs
crates/grimoire-loader/: Cargo.toml
crates/grimoire-loader/src/: lib.rs
crates/infernum/: Cargo.toml  README.md
crates/infernum-core/: Cargo.toml
crates/infernum-core/src/: error.rs  lib.rs  model.rs  request.rs  response.rs  sampling.rs  streaming.rs  types.rs
crates/infernum-server/: Cargo.toml  README.md
crates/infernum-server/src/: handlers.rs  lib.rs  openai.rs  server.rs
crates/infernum/src/: commands.rs  config.rs  main.rs
crates/malphas/: Cargo.toml
crates/malphas/src/: lib.rs  registry.rs  router.rs  scheduler.rs
crates/stolas/: Cargo.toml
crates/stolas/src/: chunker.rs  embedding.rs  lib.rs  rag.rs  store.rs
