[workspace]
resolver = "2"
members = [
    "crates/infernum",           # Main CLI/binary
    "crates/infernum-core",      # Shared types and traits
    "crates/abaddon",            # Inference engine
    "crates/malphas",            # Orchestration layer
    "crates/stolas",             # Knowledge/RAG engine
    "crates/beleth",             # Agent framework
    "crates/asmodeus",           # Fine-tuning/adaptation
    "crates/dantalion",          # Observability
    "crates/infernum-server",    # HTTP API server
    "crates/grimoire-loader",    # Grimoire integration
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
authors = ["Daemoniorum Engineering <engineering@daemoniorum.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/daemoniorum/infernum"
homepage = "https://infernum.daemoniorum.com"
description = "Blazingly fast LLM inference ecosystem"
keywords = ["llm", "inference", "ai", "ml", "gpu"]
categories = ["science", "api-bindings", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# HTTP/API
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.6", features = ["full"] }

# ML/Tensor operations
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
safetensors = "0.5"
tokenizers = "0.22"
hf-hub = "0.4"

# Vector storage
lance = "0.39"
lancedb = "0.22"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
color-eyre = "0.6"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Configuration
figment = { version = "0.10", features = ["toml", "env", "yaml"] }
config = "0.14"

# Utilities
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
bytes = "1.10"
memmap2 = "0.9"
rayon = "1.10"
crossbeam = "0.8"
num_cpus = "1.16"
humansize = "2.1"
regex = "1.11"

# Testing
criterion = "0.5"
proptest = "1.6"
test-log = "0.2"
mockall = "0.13"
wiremock = "0.6"

# Table formatting
comfy-table = "7.1"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
