[package]
name = "abaddon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Blazingly fast LLM inference engine - The Destroyer renders judgment"

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
flash-attn = ["cuda"]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]

[dependencies]
infernum-core = { path = "../infernum-core" }
dantalion = { path = "../dantalion" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# ML
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
humansize = { workspace = true }
dirs = "5.0"
fastrand = "2.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "inference"
harness = false
