[package]
name = "beleth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Autonomous agent framework - The King commands legions"

[dependencies]
infernum-core = { path = "../infernum-core", version = "0.1.0" }
abaddon = { path = "../abaddon", version = "0.1.0" }
malphas = { path = "../malphas", version = "0.1.0" }
stolas = { path = "../stolas", version = "0.1.0", default-features = false }
dantalion = { path = "../dantalion", version = "0.1.0" }
grimoire-loader = { path = "../grimoire-loader", version = "0.1.0" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP (for tools)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall = { workspace = true }
wiremock = { workspace = true }
