[package]
name = "dantalion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Observability and telemetry - The Duke reveals all secrets"

[features]
default = ["otlp"]
otlp = ["opentelemetry-otlp"]
prometheus = ["metrics-exporter-prometheus"]
jaeger = []

[dependencies]
infernum-core = { path = "../infernum-core", version = "0.1.0" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
