[package]
name = "grimoire-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Grimoire prompt system integration for Infernum"

[dependencies]
infernum-core = { path = "../infernum-core", version = "0.1.0" }

# Async
tokio = { workspace = true, features = ["fs"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

# File watching
notify = "7.0"

# Utilities
dashmap = { workspace = true }
regex = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.14"
